# pankosmia-web

./: .gitignore  Cargo.toml  Crate_README.md  README.md  Rocket.toml
default_clients/dashboard/: README.md  package-lock.json  package.json  pankosmia_metadata.json  vite.config.js
default_clients/dashboard/src/: App.jsx  index.jsx
default_clients/settings/: README.md  package-lock.json  package.json  pankosmia_metadata.json  vite.config.js
default_clients/settings/src/: App.jsx  index.jsx
setup/: app_setup.json  local_setup.json
src/: lib.rs  main.rs  mod.rs  static_vars.rs  structs.rs
src/endpoints/: app_state.rs  burrito.rs  clients.rs  content_utils.rs  debug.rs  error.rs  git.rs  gitea.rs  i18n.rs  mod.rs  navigation.rs  net.rs  settings.rs  sse.rs  version.rs
src/endpoints/atomics/: debug.rs  mod.rs  net.rs
src/endpoints/audio/: compile_audio.rs  compile_chapter_audio.rs  download_ffmpeg.rs  ffmpeg_path.rs  mod.rs  obs_para.rs  test_ffmpeg.rs
src/endpoints/burrito2/: audit.rs  get_ingredient_as_usj.rs  get_ingredient_prettified.rs  get_repo_calculated_ingredients.rs  get_repo_file_info.rs  get_repo_file_paths.rs  get_zipped_ingredients.rs  get_zipped_repo.rs  mod.rs  post_bytes_ingredient.rs  post_copy_ingredient.rs  post_delete_ingredient.rs  post_delete_ingredients.rs  post_ingredient_as_usj.rs  post_raw_ingredient.rs  post_remake_ingredients_metadata.rs  post_revert_ingredient.rs  post_zipped_ingredient.rs  post_zipped_repo.rs  raw_bytes_ingredient.rs  raw_ingredient.rs  raw_metadata.rs  raw_text_ingredient.rs  raw_text_ingredients.rs  remake_burrito_from_zip.rs  summary_metadata.rs  summary_metadatas.rs
src/endpoints/content_utils2/: content_metadata_template.rs  content_template.rs  list_content_template_filenames.rs  list_content_templates.rs  (+4 more)
src/struct/: burrito.rs  mod.rs
src/utils/: bcv_ref.rs  bootstrap.rs  burrito.rs  client.rs  ffmpeg.rs  files.rs  json.rs  json_responses.rs  launch.rs  mime.rs  mod.rs  paths.rs  response.rs  time.rs  validate_json.rs  zip.rs
stub_client/: package.json  pankosmia_metadata.json
templates/: app_setup.json  app_state.json  i18n.json  user_settings.json
test/curl/: llm.txt  new_translation_plan.txt
test/data/: new_translation_plan_payload.json  rag_payload.json
test_code/: auth_curl.bsh  auth_curl.json
webfonts/: _webfonts.css  pankosmia-Awami_Nastaliq.css  pankosmia-Awami_Nastaliq_Extra_Bold.css  pankosmia-Awami_Nastaliq_Medium.css  pankosmia-Awami_Nastaliq_Semi_Bold.css  pankosmia-Charis.css  pankosmia-Gentium.css  pankosmia-Gentium_Book.css  pankosmia-Noto_Nastaliq_Urdu.css
(+66 files in other folders)
