[package]
name = "pankosmia_web"
description = "A web server for pankosmia desktop applications"
version = "0.6.0"
edition = "2021"
license = "MIT"
homepage = "https://xenizo.fr"
repository = "https://github.com/pankosmia/pankosmia-web"
readme = "Crate_README.md"

exclude = [
    "webfonts/*"
]

[lib]
name = "pankosmia_web"
crate-type = [
    "lib"
]
path = "src/lib.rs"

[dependencies]
copy_dir = "0.1.3"
fs = "0.0.5"
git2 = "0.20.0"
hallomai = "0.1.5"
home = "0.5.9"
regex = "1.11.1"
rocket = { version = "0.5.0", features = ["json"] }
rocket-multipart-form-data = "0.10.7"
s2n-quic = "1.48.0"
serde = "1.0.210"
serde_json = "1.0.132"
tokio = "1.43.0"
ureq = { version = "2.11.0", features = ["json"] }
url = "2.5.4"
uuid = {  version = "1.14.0", features = ["v4"] }
