[package]
name = "pankosmia_web"
description = "A web server for pankosmia desktop applications"

version = "0.10.7"
edition = "2021"
license = "MIT"
homepage = "https://xenizo.fr"
repository = "https://github.com/pankosmia/pankosmia-web"
readme = "Crate_README.md"

exclude = [
    "webfonts/*"
]

[lib]
name = "pankosmia_web"
crate-type = [
    "lib"
]
path = "src/lib.rs"

[dependencies]
boon = "0.6.1"
chksum-md5 = "0.1.0"
chrono = "0.4.41"
copy_dir = "0.1.3"
ffmpeg-sidecar = "2.1.0"
git2 = "0.20.2"
home = "0.5.11"
mime-infer= "4.0.1"
md5 = "0.8"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.47.0"
ureq = { version = "2.12.1", features = ["json"] }
uuid = {  version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
whoami = "1.6.1"
time = "0.3.37"
